force-app/main/default/objects/Account/fields/Account_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Health_Status__c</fullName>
    <label>Account Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>