force-app/main/default/objects/Account/fields/Last_Executive_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Last_Executive_Engagement__c</fullName>
    <label>Last Executive Engagement</label>
    <type>Date</type>
</CustomField>